<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_poster_mov"
            android:layout_width="165dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/movie"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_mov"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_mov"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toTopOf="@+id/iv_poster_mov"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/relese"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_movie"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="23dp"
            android:text="@string/release_date"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_mov" />

        <TextView
            android:id="@+id/tv_release_mov"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/relese"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toBottomOf="@+id/relese" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="197dp"
            android:layout_height="33dp"
            android:layout_below="@id/tv_release_mov"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/vote_average"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_mov" />

        <TextView
            android:id="@+id/tv_vote_average_mov"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/vote"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vote"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toBottomOf="@+id/vote" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="394dp"
            android:layout_height="51dp"
            android:layout_marginTop="80dp"
            android:paddingTop="24dp"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vote"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toBottomOf="@+id/vote" />

        <TextView
            android:id="@+id/tv_overview_mov"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ProgressBar
            android:id="@+id/progress_Bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_mov"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toTopOf="@+id/iv_poster_mov">

        </ProgressBar>

        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btn_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/add_to_favorite"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_mov"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_mov" />

        <TextView
            android:id="@+id/tv_url_image_mov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_mov"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_mov"
            app:layout_constraintTop_toTopOf="@+id/iv_poster_mov" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="104dp"
            android:layout_height="148dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_mov"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster_mov"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_poster_mov" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>