<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_movie"
    android:layout_margin="16dp">

    <RelativeLayout
        android:id="@+id/rl_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/iv_poster_movie"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_poster_movie"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="-142dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/iv_poster_movie"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/tv_release_mov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_title_movie"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="-82dp"
            android:layout_toEndOf="@id/iv_poster_movie"
            android:ellipsize="end"
            android:maxLines="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_title_movie"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="-117dp"
            android:text="@string/overview"
            android:layout_toEndOf="@id/iv_poster_movie"
            android:ellipsize="end"
            android:maxLines="5" />

        <TextView
            android:id="@+id/tv_overview_movie"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignBottom="@id/tv_title_movie"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="-160dp"
            android:layout_toEndOf="@id/iv_poster_movie"
            android:ellipsize="end"
            android:maxLines="5" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="210dp">

        <Button
            android:id="@+id/btn_detailmov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="@color/primaryColor"
            android:textColor="#ffff"
            android:text="@string/detail"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>